# metal_contamination_fake_spectra

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
mcfs/: P1D.py  Xi1D.py  __init__.py  compute_grid_fake_spectra.py  fs_grid.py  load_runs.py  overflux_tools.py  plotting_utils.py  toy_fields.py  xi1d.py
mcfs/config/: __init__.py  setup_matplotlib.py
notebooks/: 0_run_grid_test.ipynb  1D_2PCFs_tests.ipynb  1_load_grid_test.ipynb  2_load_run_info.ipynb  3_resolution_LoS.ipynb  4_resolution_grid.ipynb  resolution_xi1D.ipynb  test.ipynb  test_grid.ipynb
scripts/: .swp  condor_run_grid_skewers.sh  grid.py  launch_grid_screen.sh  run_grid_skewers.py  run_grid_skewers.sub  run_grid_skewers_1.sub  run_grid_skewers_2.sub  run_grid_skewers_3.sub  run_grid_test.py
